# opstelling

./: .gitignore  Dockerfile  README.md  fly.toml  hello.py  opstelling.ipynb  opstelling.py  pyproject.toml  sudoku.ipynb
app/: config.py  main.py  opstelling.py  pyproject.toml
app/static/: style.css
app/templates/: base.html  form.html  result.html
notebooks/: opstelling.ipynb
