[project]
name = "opstelling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "mypy>=1.12.0",
    "numpy>=2.1.1",
    "ortools>=9.11.4210",
    "pyschedule>=0.2.34",
    "ruff>=0.6.8",
    "tabulate>=0.9.0",
]
