[tool.poetry]
name = "opstelling"
version = "0.1.0"
description = "Maakt opstellingen voor voetbalteam, waarbij iedereen overal speelt en evenveel wisselt"
authors = ["Quirijn Landman <quirijn@landmail.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
