[project]
name = "opstelling"
version = "0.1.0"
description = "Opstelling generator"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "fastapi[standard]>=0.115.3",
    "numpy>=2.1.2",
    "tabulate>=0.9.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "mypy>=1.13.0",
    "ruff>=0.7.0",
]
