[tool.poetry]
name = "opstelling"
version = "0.1.0"
description = "Maak opstellingen voor voetbalteam"
authors = ["Quirijn Landman <quirijn@landmail.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
tabulate = "^0.9.0"
fastapi = "^0.115.3"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
jinja2 = "^3.1.4"
python-multipart = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
